--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,28 +1,43 @@
-name: release
+name: Release
+
 on:
   push:
     tags:
       - 'v*'
+  # Add manual trigger
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Release tag (e.g., v1.0.0)'
+        required: true
+        type: string
+
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Unshallow
         run: git fetch --prune --unshallow
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.18
+          go-version: '>=1.20.0'
       - name: Import GPG key
         id: import_gpg
         uses: Ferlab-Ste-Justine/ghaction-import-gpg@main
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           PASSPHRASE: ${{ secrets.PASSPHRASE }}
+      - name: Set release tag for manual trigger
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          git tag ${{ github.event.inputs.tag }}
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2.7.0
+        uses: goreleaser/goreleaser-action@v4
         with:
           version: latest
           args: release --clean
